--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "flow-bin": "^0.73.0",
+    "jssha": "^2.3.1",
     "moment-timezone": "^0.5.17",
     "react": "^16.4.0",
     "react-clock": "^2.3.0",
