--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "classnames": "^2.2.6",
+    "esprima": "^4.0.0",
     "flow-bin": "^0.73.0",
     "jssha": "^2.3.1",
     "moment-timezone": "^0.5.17",
